--- a/apicius-frontend/src/styles/loginSignup.css
+++ b/apicius-frontend/src/styles/loginSignup.css
@@ -41,6 +41,48 @@
     height: 20px;
 }
 
+@media (max-width: 480px) {
+    .social-login-buttons {
+        gap: 10px;
+        margin-top: 2%;
+    }
+    
+    .social-login-buttons button {
+         padding: 3%;
+         font-size: 0.9rem;
+        width: 100%; /* size of buttons in container */
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+     
+    .social-login-buttons .icon {
+    margin-right: 5%;
+    width: 15px;
+    height: 15px;
+}
+}
+
+@media (min-width: 480px) and (max-width: 769px) {
+    .social-login-buttons {
+        gap: 10px;
+        margin-top: 2%;
+    }
+    
+    .social-login-buttons button {
+        padding: 3%;
+        font-size: 1.1rem;
+        width: 100%; /* size of buttons in container */
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+     
+    .social-login-buttons .icon {
+    margin-right: 5%;
+    width: 17px;
+    height: 17px;
+}
+}
+
 /* ---_______________________Unique page styling_________________________--- */
 
 
@@ -57,11 +99,11 @@
 }
 
 .login-card {
-   width: 400px;
+   width: 25rem;
     max-width: 100%;
     margin: auto;
-    padding: 20px; /* Space around fields */
-    border-radius: 20px; /* Roundness of card */
+    padding: 2rem; /* Space around fields */
+    border-radius: 1.25rem; /* Roundness of card */
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
     background-color: #fff;
     text-align: center;
@@ -70,32 +112,30 @@
 
 .login-form input {
     width: 100%;
-    padding: 10px; /* Height of input field */
-    margin-bottom: 20px; /* Margins from card */
+    padding: 0.7rem; /* Height of input field */
+    margin-bottom: 1.25rem; /* Margins from card */
     border: 1px solid #ddd; /* Presence, Size, color of border */
-    border-radius: 5px; /* Roundness of the box */
+    border-radius: 8px; /* Roundness of the box */
     font-size: 1rem;
     box-sizing: border-box;
 }
 
-
 .login-btn {
     background-color: orange; /* Color of main login button */
     color: white;
-    padding: 17px;
+    padding: 0.8rem;
     border: none;
-    border-radius: 5px;
-    font-size: 1.2rem;
+    border-radius: 12px;
+    font-size: 1.4rem;
     cursor: pointer;
     font-weight: bold;
     width: 100%; /* Ensures it spans the full form width */
-    margin-top: 15px;
+    margin-top: 1.2rem;
 }
 
 .login-btn:hover {
-    background-color: rgb(233, 66, 0); /* Hover effect */
+    background-color: rgb(233, 66, 0);
 }
-
 
 .forgot-password {
     display: flex;
@@ -104,8 +144,8 @@
     font-size: 0.9rem;
     text-decoration: underline;
     cursor: pointer;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0.6rem;
+    margin-bottom: 1.2rem;
 }
 
 /* Styling Text of the card */
@@ -113,17 +153,64 @@
     font-size: 1.6rem;
     color: #333;
     font-weight: bold;
-    margin-bottom: 30px;
-    margin-top: 10px;
+    margin-bottom: 2rem;
+    margin-top: 0.7rem;
 }
 
 .login-card p {
     font-size: 1rem;
     color: #666;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
 }
 
+@media (max-width: 480px) {
+    .login-page {
+        height: 100vh;
+    }
+    
+    .login-card {
+        width: 80%;
+        max-width: 100%;
+        margin: auto;
+        padding: 1.5rem; /* Space around fields */
+    }
+    
+    .login-form input {
+        width: 100%;
+        padding: 0.6rem; /* Height of input field */
+        margin-bottom: 1.2rem; /* Margins from card */
+        font-size: 0.9rem;
+        box-sizing: border-box;
+}
+
+    .login-btn {
+        width: 100%;
+        padding: 0.6rem;
+        margin-top: 0.8rem;
+        font-size: 1rem;
+        cursor: pointer;
+    }
+    
+    .forgot-password {
+        font-size: 0.8rem;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    
+    /* Styling Text of the card */
+    .login-card h2 {
+        font-size: 1.3rem;
+        margin-bottom: 1.5rem;
+        margin-top: 0.4rem;
+    }
+    
+    .login-card p {
+        font-size: 0.9rem;
+        margin-top: 1.2rem;
+        margin-bottom: 1.1rem;
+    }
+}
 /* _______________________Register Page_______________________*/
 .register-page {
     display: flex;
@@ -140,10 +227,11 @@
 }
 
 .register-card {
-    width: 400px;
+    z-index: 1;
+    width: 50%;
     max-width: 100%;
-    margin: auto;
-    padding: 30px; /* Space around fields */
+    margin: 10%;
+    padding: 2rem; /* Space around fields */
     border-radius: 20px; /* Roundness of card */
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
     background-color: #fff;
@@ -156,20 +244,20 @@
     padding: 10px; /* Height of input field */
     margin-bottom: 20px; /* Margins from card */
     border: 1px solid #ddd; /* Presence, Size, color of border */
-    border-radius: 5px;
+    border-radius: 8px;
     font-size: 1rem;
     box-sizing: border-box;
 }
 
 .register-form > button {
     width: 100%;
-    padding: 17px;
-    margin-top: 15px;
+    padding: 0.9rem;
+    margin-top: 1rem;
     background-color: orange;
     color: white;
     border: none;
-    border-radius: 5px;
-    font-size: 1.2rem;
+    border-radius: 10px;
+    font-size: 1.4rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
     font-weight: bold;
@@ -180,16 +268,15 @@
 }
 
 .loginR-btn {
-    
-    background-color: #f4a318;
+    background-color: orange;
     color: white;
-    padding: 8px 16px;
+    padding: 0.5rem 1rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
     font-weight: bold;
     font-size: 1.1rem;
-    margin-right: 15px;
+    margin-right: 1rem;
 }
 
 .loginR-btn:hover {
@@ -201,8 +288,8 @@
     font-family: inherit; /* Match font family */
     font-size: 1rem; /* Ensure font size is consistent */
     width: 100%; /* Full width of form */
-    padding: 10px; /* Match padding of other inputs */
-    margin-bottom: 20px;
+    padding: 0.625rem; /* Match padding of other inputs */
+    margin-bottom: 1.25rem;
     border: 1px solid #ddd;
     border-radius: 5px;
     box-sizing: border-box;
@@ -221,26 +308,109 @@
     font-size: 1.6rem;
     color: #333;
     font-weight: bold;
-    margin-bottom: 30px;
-    margin-top: 10px;
+    margin-bottom: 2rem;
+    margin-top: 0.625rem;
 }
 
 .register-card p {
     font-size: 1rem;
     color: #666;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
 }
 
 @media (max-width: 480px) {
     .register-page {
-        padding-top: 60px; /* Increase space for the header */
+        padding-top: 4.1rem; /* Increase space for the header */
     }
 
     .register-card {
-        margin-top: 0; /* Ensure it adapts to the page's layout */
-        padding: 15px; /* Slightly smaller padding for small screens */
-        width: 95%; /* Use nearly full width */
+    width: 80%;
+    max-width: 100%;
+    margin: auto;
+    padding: 1.5rem; /* Space around fields */
+    }
+
+    /* -Styling Text of the card- */
+    .register-card h2 {
+    font-size: 1.3rem;
+    margin-bottom: 1.5rem;
+    margin-top: 0.4rem;
+}
+
+    .register-card p {
+    font-size: 0.9rem;
+    margin-top: 1.2rem;
+    margin-bottom: 1.1rem;
+}
+
+.loginR-btn {
+    padding: 0.6rem 1.2rem;
+    cursor: pointer;
+    font-size: 0.8rem;
+}
+.register-form input {
+    width: 100%;
+    padding: 0.6rem; /* Height of input field */
+    margin-bottom: 1.2rem; /* Margins from card */
+    font-size: 0.9rem;
+    box-sizing: border-box;
+}
+
+.register-form > button {
+    width: 100%;
+    padding: 0.6rem;
+    margin-top: 0.8rem;
+    font-size: 1rem;
+    cursor: pointer;
     }
 }
-  
+
+@media (min-width: 480px) and (max-width: 769px) {
+    .register-page {
+        padding-top: 4.1rem; /* Increase space for the header */
+    }
+
+    .register-card {
+    width: 70%;
+    max-width: 100%;
+    margin: auto;
+    padding: 1.9rem; /* Space around fields */
+    }
+
+    /* -Styling Text of the card- */
+    .register-card h2 {
+    font-size: 1.6rem;
+    margin-bottom: 1.9rem;
+    margin-top: 0.4rem;
+}
+
+    .register-card p {
+    font-size: 1.1rem;
+    margin-top: 1.4rem;
+    margin-bottom: 1.6rem;
+}
+
+.loginR-btn {
+    padding: 0.7rem 1.4rem;
+    cursor: pointer;
+    font-size: 1.2rem;
+    border-radius: 8px;
+}
+.register-form input {
+    width: 100%;
+    padding: 0.7rem; /* Height of input field */
+    margin-bottom: 1rem; /* Margins from card */
+    font-size: 1.1rem;
+    box-sizing: border-box;
+}
+
+.register-form > button {
+    width: 100%;
+    padding: 0.8rem;
+    margin-top: 0.8rem;
+    font-size: 1.4rem;
+    border-radius: 8px;
+    cursor: pointer;
+    }
+}
