--- a/apicius-frontend/src/styles/allRecipes.css
+++ b/apicius-frontend/src/styles/allRecipes.css
@@ -19,8 +19,10 @@
     border: 1px solid #ddd;
     border-radius: 12px;
     padding: 20px;
-    margin: 1rem 0;
-    padding-left: 4%;
+    margin: 1rem 2rem;
+    margin-bottom: 2rem;
+    padding-left: 8%;
+    padding-right: 8%;
     background-color: #fff;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
@@ -31,11 +33,75 @@
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15);
 }
 
-/* Recipe Title */
-.recipe-title {
-    font-size: 1.5rem;
+.recipe-content {
+    display: flex;
+    justify-content: space-between;
+    gap: 20%;
+}
+
+.recipe-image img {
+    max-width: 250px;
+    max-height: 250px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-top: 1rem;
+}
+
+.recipe-details {
+    flex: 1;
+}
+
+.recipe-left-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center the image */
+    text-align: center;
+}
+
+/* Right Column: Recipe Details */
+.recipe-right-column {
+    flex: 1;
+}
+
+/* Details */
+.recipe-details ul,
+.recipe-details p,
+.recipe-nutrition ul,
+.recipe-nutrition p {
+    margin: 0.5rem 0;
+}
+
+.recipe-nutrition {
     margin-top: 0.5rem;
     margin-bottom: 1rem;
+    text-align: left;
+}
+
+.recipe-nutrition h3 {
+    margin-bottom: 0.5rem;
+}
+
+.recipe-content h4 {
+    margin-bottom: -0.5rem;
+}
+
+/* Allergies List */
+.recipe-nutrition ul {
+    list-style: none;
+    padding: 0;
+}
+
+.recipe-nutrition ul li {
+    margin: 2px 0;
+}
+
+/* Recipe Title */
+.recipe-title {
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 0.5rem;
+    margin-bottom: 1.4rem;
     color: #007bff;
 }
 
@@ -59,17 +125,18 @@
 
 /* Ingredients Section */
 .recipe-ingredients {
-    margin-top: 15px;
+    margin-top: 1rem;
 }
 
-.recipe-ingredients h3 {
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-    color: #444;
+.recipe-right-column h3 {
+    font-size: 1rem;
+    margin-bottom: -0.4rem;
+    color: #000000;
 }
 
 .recipe-ingredients ul {
     list-style-type: none;
+    margin-left: 1rem;
     padding: 0;
 }
 
